se realiza la creación de la carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -5,5 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Markly</title>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <img src="/img/bolso.png" alt="Bolsos Markly" width="50" height="50" />
+      <nav>
+        <a href="/html/">Home</a> | <a href="/css/">Bag</a> |
+        <a href="/js/">Accesories</a> |
+        <a href="/python/">Blog</a>
+        <a href="/python/">Contact</a>
+      </nav>
+    </header>
+
+    <secctions>
+      <main>
+        <section>
+          <article>
+            <img src="/img/fondo1.jpg" alt="Bolsos Markly" />
+          </article>
+        </section>
+      </main>
+    </secctions>
+
+    <footer></footer>
+  </body>
 </html>
