se realiza la estructura de header y Section_mein_section_article_se agrega imagen de fondo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main>
         <section>
           <article>
-            <img src="/img/fondo1.jpg" alt="Bolsos Markly" />
+            <img src="/img/fondo1.jpg" alt="Bolsos Markly p" />
           </article>
         </section>
       </main>
