--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markly</title>
-  </head>
 
-  <body>
-    <header>
-      <img src="/img/bolso.png" alt="Bolsos Markly" width="50" height="50" />
-      <nav>
-        <a href="/html/">Home</a> | <a href="/css/">Bag</a> |
-        <a href="/js/">Accesories</a> |
-        <a href="/python/">Blog</a>
-        <a href="/python/">Contact</a>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css " />
+  <title>Markly</title>
+</head>
 
-    <secctions>
-      <main>
-        <section>
-          <article>
-            <img src="/img/fondo1.jpg" alt="Bolsos Markly p" />
-          </article>
-        </section>
-      </main>
-    </secctions>
+<body>
+  <header>
+    <img src="./assets/images/Frame.png" alt="Frame" />
+    <img src="./assets/images/Markly.png" alt="Markley" />
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Bags</a></li>
+        <li><a href="#">Accesories</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
 
-    <footer></footer>
-  </body>
+    </nav>
+    <img src="./assets/images/shopping-bag-03.png" alt="shopping">
+  </header>
+
+
+  <main>
+    <section>
+      <article>
+        <!-- <img src="./assets/images/Rectangle (1).png" alt="Rectangulo de fondo" /> -->
+        <img src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
+        <img src="./assets/images/Image.png" alt="Imagen de bolso" />
+        <img src="./assets/images/Group.png" alt="Titulo" />
+        <p>We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
+          premium bags that seamlessly blend style, functionality, and durability.</p>
+        <button>Shop Now</button>
+        <span>Elevate Your Style with Exceptional Bags!</span>
+        <span>SCROLL</span>
+
+      </article>
+    </section>
+  </main>
+
+
+  <footer></footer>
+</body>
+
 </html>
