--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
       </article>
     </section>
+
+    <section>
+      <article></article>
+      <article></article>
+    </section>
   </main>
 
 
