--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
   </head>
 
   <body>
-    <header>
+    <header align="center">
       <img src="/img/bolso.png" alt="Bolsos Markly" width="50" height="50" />
       <nav>
         <a href="/html/">Home</a> | <a href="/css/">Bag</a> |
         <a href="/js/">Accesories</a> |
-        <a href="/python/">Blog</a>
+        <a href="/python/">Blog</a> |
         <a href="/python/">Contact</a>
       </nav>
     </header>
 
     <secctions>
       <main>
-        <section>
+        <section width="1440" height="879" align="center">
           <article>
             <img src="/img/fondo1.jpg" alt="Bolsos Markly p" />
           </article>
+        </section>
+        <section  align="center">
+            <div width="1440" height="592" style="border: 1; border-color: black;">
+fsgfg
+            </div>
         </section>
       </main>
     </secctions>
