Se realiza Estilado a un 80% de la primeera sección

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <header>
-    <img src="./assets/images/Frame.png" alt="Frame" />
-    <img src="./assets/images/Markly.png" alt="Markley" />
+    <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+    <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,18 +22,17 @@
       </ul>
 
     </nav>
-    <img src="./assets/images/shopping-bag-03.png" alt="shopping">
+    <img class="logoshop" src="./assets/images/shopping-bag-03.png" alt="shopping">
   </header>
 
 
   <main>
     <!--sección 1-->
-    <section>
-      <article>
-        <!-- <img src="./assets/images/Rectangle (1).png" alt="Rectangulo de fondo" /> -->
-        <img src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
-        <img src="./assets/images/Image.png" alt="Imagen de bolso" />
-        <img src="./assets/images/Group.png" alt="Titulo" />
+    <section class="sectionprincipal">
+      <article class="articleprincipal">
+        <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
+        <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
+        <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
         <p>We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
           premium bags that seamlessly blend style, functionality, and durability.</p>
         <button>Shop Now!</button>
@@ -46,8 +45,11 @@
     <section>
       <article>
         <span>YOUR PERFECT FIT</span>
-        <h2>We believe in fashion that cares for the planet. Our commitment to sustainability goes beyond creating stylish bags – it's about making a positive impact</h2>
-        <p>Choosing the right size is crucial when it comes to bags. Use our comprehensive size guide to ensure your Markly bag is not only stylish but also perfectly suited to your needs. From compact crossbodies to spacious totes, we've got the right size for every occasion.</p>
+        <h2>We believe in fashion that cares for the planet. Our commitment to sustainability goes beyond creating
+          stylish bags – it's about making a positive impact</h2>
+        <p>Choosing the right size is crucial when it comes to bags. Use our comprehensive size guide to ensure your
+          Markly bag is not only stylish but also perfectly suited to your needs. From compact crossbodies to spacious
+          totes, we've got the right size for every occasion.</p>
       </article>
       <article>
         <img src="./assets/images/bolsoNegro.png" alt="Bolso Negro" />
@@ -61,116 +63,129 @@
       <img src="./assets/images/piedrasColores.png" alt="Piedras de Colores" />
     </article>
     <article>
-      <h2>Adventure collection is designed to keep up with your dynamic lifestyle, offering durability without compromising on style.</h2>
-      <p>At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of premium bags that seamlessly blend style, functionality, and durability.</p>
+      <h2>Adventure collection is designed to keep up with your dynamic lifestyle, offering durability without
+        compromising on style.</h2>
+      <p>At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
+        collection of premium bags that seamlessly blend style, functionality, and durability.</p>
       <button>Shop Now!</button>
     </article>
-  </section>    
+  </section>
 
-    <!--sección 4-->
-    <section>
-      <article>
-        <img src="./assets/images/carteraRosada.png" alt="Cartera Rosada" />
-      </article>
-      <article>
-        <h2>Whether you're seeking classic sophistication, urban chic, or a companion for you, Markly has the perfect bag for every occasion.</h2>
-        <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's commitment to combining style, durability, and functionality.</p>
-        <button>Shop Now!</button>
-      </article>
-    </section> 
+  <!--sección 4-->
+  <section>
+    <article>
+      <img src="./assets/images/carteraRosada.png" alt="Cartera Rosada" />
+    </article>
+    <article>
+      <h2>Whether you're seeking classic sophistication, urban chic, or a companion for you, Markly has the perfect bag
+        for every occasion.</h2>
+      <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's commitment to
+        combining style, durability, and functionality.</p>
+      <button>Shop Now!</button>
+    </article>
+  </section>
 
-    <!--sección 5-->
-    <section>
+  <!--sección 5-->
+  <section>
+    <article>
+      <img src="./assets/images/circuloNegro.png" alt="circulo negro Pequeño" />
+      <h2>Why Choose Markly?</h2>
+    </article>
+    <article>
+      <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's commitment to
+        combining style, durability, and functionality.</p>
+      <img src="./assets/images/flechaIzquierda.png" alt="flecha Izquierda" />
+      <img src="./assets/images/flechaDerecha.png" alt="flecha Derecha" />
+    </article>
+    <article>
       <article>
-        <img src="./assets/images/circuloNegro.png" alt="circulo negro Pequeño" />
-        <h2>Why Choose Markly?</h2>
+        <img src="./assets/images/caja.png" alt="Caja" />
+        <h4>Quality Craftsmanship</h4>
+        <p>Meticulously crafted using premium materials, our bags are a testament to enduring quality.ensuring you're
+          always prepared for any journey.</p>
       </article>
       <article>
-        <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's commitment to combining style, durability, and functionality.</p>
-        <img src="./assets/images/flechaIzquierda.png" alt="flecha Izquierda" />
-        <img src="./assets/images/flechaDerecha.png" alt="flecha Derecha" />
-      </article> 
-      <article>
-        <article>
-          <img src="./assets/images/caja.png" alt="Caja" />
-          <h4>Quality Craftsmanship</h4>
-          <p>Meticulously crafted using premium materials, our bags are a testament to enduring quality.ensuring you're always prepared for any journey.</p>
-        </article>
-        <article>
-          <img src="./assets/images/chicaCaja.png" alt="chica Caja" />
-          <h4>Versatility</h4>
-          <p>From the office to weekend getaways, Markly bags seamlessly blend style with practicality, ensuring you're always prepared for any journey.</p>
-        </article>
-        <article>
-          <img src="./assets/images/chicaCartera.png" alt="chica Cartera" />
-          <h4>Sustainability</h4>
-          <p>We're committed to eco-friendly practices, sourcing materials responsibly and crafting bags that stand the test of time.</p>
-        </article>
+        <img src="./assets/images/chicaCaja.png" alt="chica Caja" />
+        <h4>Versatility</h4>
+        <p>From the office to weekend getaways, Markly bags seamlessly blend style with practicality, ensuring you're
+          always prepared for any journey.</p>
       </article>
-    </section>
+      <article>
+        <img src="./assets/images/chicaCartera.png" alt="chica Cartera" />
+        <h4>Sustainability</h4>
+        <p>We're committed to eco-friendly practices, sourcing materials responsibly and crafting bags that stand the
+          test of time.</p>
+      </article>
+    </article>
+  </section>
 
-    <!--sección 6-->
-    <section>
-      <article>
-          <p>Urban Explorer & Adventure Seeker</p>
-          <h2>Explore our carefully curated collections</h2>
-      </article>
-      <article>
-        <img src="./assets/images/carteraAzulRey.png" alt="cartera Azul Rey" />
-      </article>
-      <article>
-        <p>Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is just a click away.</p>
-        <img src="./assets/images/flechaIzquierda.png" alt="flecha Izquierda" />
-        <img src="./assets/images/flechaDerecha.png" alt="flecha Derecha" />
-      </article>
-    </section>    
+  <!--sección 6-->
+  <section>
+    <article>
+      <p>Urban Explorer & Adventure Seeker</p>
+      <h2>Explore our carefully curated collections</h2>
+    </article>
+    <article>
+      <img src="./assets/images/carteraAzulRey.png" alt="cartera Azul Rey" />
+    </article>
+    <article>
+      <p>Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is
+        just a click away.</p>
+      <img src="./assets/images/flechaIzquierda.png" alt="flecha Izquierda" />
+      <img src="./assets/images/flechaDerecha.png" alt="flecha Derecha" />
+    </article>
+  </section>
 
-    <!--sección 7-->
-    <section>
+  <!--sección 7-->
+  <section>
+    <article>
+      <span>Blog</span>
+      <h2>Rhe Latest Trends</h2>
+    </article>
+    <article>
       <article>
-        <span>Blog</span>
-        <h2>Rhe Latest Trends</h2>
+        <img src="./assets/images/carteraReflejo.png" alt="carteraReflejo" />
+        <h3>Styling Your Markly Bag</h3>
+        <p>Explore the beauty of simplicity and learn how to make a statement with minimalistic styling featuring Markly
+          bags</p>
+        <a href="">Read More</a>
       </article>
       <article>
-        <article>
-          <img src="./assets/images/carteraReflejo.png" alt="carteraReflejo" />
-          <h3>Styling Your Markly Bag</h3>
-          <p>Explore the beauty of simplicity and learn how to make a statement with minimalistic styling featuring Markly bags</p>
-          <a href="">Read More</a>
-        </article>
-        <article>
-          <img src="./assets/images/texturaCartera.png" alt="texturaCartera" />
-          <h3>Must-Have Bags for the Season</h3>
-          <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and </p>
-          <a href="">Read More</a>
-        </article>
-        <article>
-          <img src="./assets/images/carteraManos.png" alt="carteraManos" />
-          <h3>Travel Essentials for Jet-Setters</h3>
-          <p>Embark on a journey with us as we explore travel tips and essential accessories for the modern jet-setter.</p>
-          <a href="">Read More</a>
-        </article>
+        <img src="./assets/images/texturaCartera.png" alt="texturaCartera" />
+        <h3>Must-Have Bags for the Season</h3>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+          galley of type and </p>
+        <a href="">Read More</a>
       </article>
-    </section>    
+      <article>
+        <img src="./assets/images/carteraManos.png" alt="carteraManos" />
+        <h3>Travel Essentials for Jet-Setters</h3>
+        <p>Embark on a journey with us as we explore travel tips and essential accessories for the modern jet-setter.
+        </p>
+        <a href="">Read More</a>
+      </article>
+    </article>
+  </section>
 
-    <!--sección 7-->
-    <section>
+  <!--sección 7-->
+  <section>
+    <article>
+      <img src="./assets/images/carteraMiel.png" alt="carteraMiel" />
+    </article>
+    <article>
       <article>
-        <img src="./assets/images/carteraMiel.png" alt="carteraMiel" />
+        <h2>Join the Markly Community ⎯ Subscribe to Our Newsletter</h2>
       </article>
       <article>
-          <article>
-              <h2>Join the Markly Community ⎯ Subscribe to Our Newsletter</h2>
-          </article>
-          <article>
-              <p>Be the first to know about new arrivals, exclusive promotions, and the latest trends in the world of bags. Sign up for our newsletter and stay connected with the Markly lifestyle.</p>
-          </article>
-          <article>
-              <input type="text" placeholder="Email Address">
-              <button>Submit</button>
-          </article>
+        <p>Be the first to know about new arrivals, exclusive promotions, and the latest trends in the world of bags.
+          Sign up for our newsletter and stay connected with the Markly lifestyle.</p>
       </article>
-    </section>  
+      <article>
+        <input type="text" placeholder="Email Address">
+        <button>Submit</button>
+      </article>
+    </article>
+  </section>
 
   <footer></footer>
 </body>
