Ajustes estilos en clase

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
   <header>
-    <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
-    <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+    <div>
+      <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+      <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,24 +23,30 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-
     </nav>
+   <div>
     <img class="logoshop" src="./assets/images/shopping-bag-03.png" alt="shopping">
+  </div> 
   </header>
 
 
   <main>
     <!--sección 1-->
-    <section class="sectionprincipal">
-      <article class="articleprincipal">
-        <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
-        <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
-        <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
-        <p>We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
-          premium bags that seamlessly blend style, functionality, and durability.</p>
-        <button>Shop Now!</button>
-        <span>Elevate Your Style with Exceptional Bags!</span>
-        <span>SCROLL</span>
+    <section>
+      <article>
+        <div class="seccion1">
+            <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
+            <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
+            <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
+            
+        </div>
+        <div>
+            <p>We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
+              premium bags that seamlessly blend style, functionality, and durability.</p>
+            <button>Shop Now!</button>
+            <span>Elevate Your Style with Exceptional Bags!</span>
+            <span>SCROLL</span>
+        </div>
       </article>
     </section>
 
