Ajustes primera seccion

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
             <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
             <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
-            
+             <p class="texto">We believe in the power of a well-crafted bag to enhance your lifestyle. <br>
+              Explore our curated collection of premium bags that seamlessly blend style,<br> 
+              functionality, and durability.</p>
+             <button class="boton">Shop Now!</button>
         </div>
-        <div>
-            <p>We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
-              premium bags that seamlessly blend style, functionality, and durability.</p>
-            <button>Shop Now!</button>
+        <div class="pieSeccion">
             <span>Elevate Your Style with Exceptional Bags!</span>
             <span>SCROLL</span>
         </div>
