se crea la estrutura del footer con stylos previos

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-   <div>
-    <img class="logoshop" src="./assets/images/shopping-bag-03.png" alt="shopping">
-  </div> 
+    <div>
+      <img class="logoshop" src="./assets/images/shopping-bag-03.png" alt="shopping">
+    </div>
   </header>
 
 
@@ -35,17 +35,17 @@
     <section>
       <article>
         <div class="seccion1">
-            <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
-            <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
-            <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
-             <p class="texto">We believe in the power of a well-crafted bag to enhance your lifestyle. <br>
-              Explore our curated collection of premium bags that seamlessly blend style,<br> 
-              functionality, and durability.</p>
-             <button class="boton">Shop Now!</button>
+          <img class="img-page" src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" />
+          <img class="img-bolso" src="./assets/images/Image.png" alt="Imagen de bolso" />
+          <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
+          <p class="texto">We believe in the power of a well-crafted bag to enhance your lifestyle. <br>
+            Explore our curated collection of premium bags that seamlessly blend style,<br>
+            functionality, and durability.</p>
+          <button class="boton">Shop Now!</button>
         </div>
         <div class="pieSeccion">
-            <span>Elevate Your Style with Exceptional Bags!</span>
-            <span>SCROLL</span>
+          <span>Elevate Your Style with Exceptional Bags!</span>
+          <span>SCROLL</span>
         </div>
       </article>
     </section>
@@ -196,7 +196,52 @@
     </article>
   </section>
 
-  <footer></footer>
+  <footer>
+    <div class="footer-marca">
+      <img class="logo" src="./assets/images/Property 1=Black.png" alt="Markly" />
+      <p>
+        We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
+        premium bags
+        that seamlessly blend style, functionality, and durability.
+      </p>
+    </div>
+    <div class="footer_listas">
+      <ul>
+        <li>Company</li>
+        <li>Bags</li>
+        <li>Blogs</li>
+        <li>Community</li>
+        <li>Contact</li>
+      </ul>
+      <ul>
+        <li>Services</li>
+        <li>Bussines</li>
+        <li>Modifications</li>
+        <li>Morgans Care</li>
+        <li>Insurance</li>
+        <li>Warranty</li>
+      </ul>
+      <ul>
+        <li>Resource</li>
+        <li>News</li>
+        <li>Newsletter</li>
+        <li>Careers</li>
+        <li>FAQS</li>
+        <li>Review</li>
+      </ul>
+      <ul>
+        <li>Legal</li>
+        <li>Privacy Policy</li>
+        <li>Tems of Used</li>
+        <li>Cookies</li>
+        <li>Sitemap</li>
+      </ul>
+    </div>
+    <div class="footer_copy">
+      <h3>©2024 Markly. All right reserved. </h3>
+      <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+    </div>
+  </footer>
 </body>
 
 </html>
