--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="./assets/images/paloma vem.png">
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="styles.css " />
   <title>Markly</title>
@@ -197,49 +198,62 @@
   </section>
 
   <footer>
-    <div class="footer-marca">
-      <img class="logo" src="./assets/images/Property 1=Black.png" alt="Markly" />
-      <p>
-        We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
-        premium bags
-        that seamlessly blend style, functionality, and durability.
-      </p>
+    <div class="footer_div">
+      <div class="izquierda">
+        <img src="./assets/images/Property 1=Black.png" alt="Markly" />
+        <p>
+          We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
+          premium bags
+          that seamlessly blend style, functionality, and durability.
+        </p>
+        <!-- Contenido del div izquierdo -->
+      </div>
+      <div class="derecha">
+        <div>
+          <ul>
+            <li><b>Company</b></li>
+            <li><a href="#">Bags</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><b>Services</b></li>
+            <li><a href="#">Bussines</a></li>
+            <li><a href="#">Modifications</a></li>
+            <li><a href="#">Morgans Care</a></li>
+            <li><a href="#">Insurance</a></li>
+            <li><a href="#">Warranty</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><b>Resource</b></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">FAQS</a></li>
+            <li><a href="#">Review</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><b>Legal</b></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Tems of Used</a></li>
+            <li><a href="#">Cookies</a></li>
+            <li><a href="#">Sitemap</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="footer_listas">
-      <ul>
-        <li>Company</li>
-        <li>Bags</li>
-        <li>Blogs</li>
-        <li>Community</li>
-        <li>Contact</li>
-      </ul>
-      <ul>
-        <li>Services</li>
-        <li>Bussines</li>
-        <li>Modifications</li>
-        <li>Morgans Care</li>
-        <li>Insurance</li>
-        <li>Warranty</li>
-      </ul>
-      <ul>
-        <li>Resource</li>
-        <li>News</li>
-        <li>Newsletter</li>
-        <li>Careers</li>
-        <li>FAQS</li>
-        <li>Review</li>
-      </ul>
-      <ul>
-        <li>Legal</li>
-        <li>Privacy Policy</li>
-        <li>Tems of Used</li>
-        <li>Cookies</li>
-        <li>Sitemap</li>
-      </ul>
-    </div>
-    <div class="footer_copy">
+    <div class="abajo">
       <h3>©2024 Markly. All right reserved. </h3>
-      <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+      <div>
+        <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+      </div>
     </div>
   </footer>
 </body>
