--- a/accesories.html
+++ b/accesories.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accesories - Collections</title>
+    <title>Accesories - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css " />
 </head>
 <body>
 
-    <header style="padding-left: 20%;">
-        <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home"></a>
-        <h6>Accesories</h6>
+    <header class="headerAccesorios">
+        <div class="headVarAcc">
+            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
+            <h6>Accesories</h6>
+        </div>    
         <h1 class="display-4"><strong>Rhe Latest Trends</strong></h1>
     </header>
-    <main style="text-align: center; padding-left: 19%;">
+    <main class="mainAccesorios">
         <section>
             <div class="container-fluid row col-10 justify-content:center ">
 
-                <div class="card" style="width: 19rem; padding:8px; margin: 9px;">
+                <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/carteraReflejo.png" class="card-img-top" alt="carteraReflejo">
                     <div class="card-body text-start">
                       <h5 class="card-title">Styling Your Markly Bag for season</h5>
@@ -28,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 19rem; padding:8px; margin: 9px;">
+                <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/texturaCartera.png" class="card-img-top" alt="texturaCartera">
                     <div class="card-body text-start">
                       <h5 class="card-title">Must-Have Bags for the Season</h5>
@@ -37,7 +39,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 19rem; padding:8px; margin: 9px;">
+                <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/carteraManos.png" class="card-img-top" alt="carteraManos">
                     <div class="card-body text-start">
                       <h5 class="card-title">Travel Essentials for Jet-Setters</h5>
