--- a/bags.html
+++ b/bags.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bags - Collections</title>
+    <title>Bags - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css " />
     
 </head>
 <body >
-    <header style="text-align: center; padding-top: 5%;">
-        <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home"></a>
-        <h5>Urban Explorer & Adventure Seeker </h5>
+    <header class="headerBags">
+        <div class="headVarBags">
+            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
+            <h5>Urban Explorer & Adventure Seeker </h5>
+        </div>    
         <h1 class="display-3"><strong>Explore our carefully <br>curated collections</strong></h1>
     </header>
-    <main style="text-align: center; padding-left: 23%;">
+    <main class="mainBlogBag">
         <section>
             <div class="container-fluid row col-9 justify-content:center">
 
@@ -27,7 +29,7 @@
                     <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                 </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active" style="padding-bottom: 125px;">
+                        <div class="carousel-item active ajCarrusel">
                             <br><br><br>
                             <img src="./assets/images/carteraAzulRey2.png" class="rd-block w-50 h-50" alt="Cartera Azul Rey">
                             <div class="carousel-caption d-none d-sm-block">
