--- a/blog.html
+++ b/blog.html
@@ -5,44 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <style>
-        header{
-            padding-left: 24%;
-            text-align: left; 
-            padding-top: 5%;
-        }
-        main{
-            text-align: center; 
-            padding-left: 23%;
-        }
-        .tarjeta{
-            border: 1px solid gray; 
-            width: 40%; 
-            padding: 10px;
-            margin: 20px;
-            text-align: left; 
-        }
-        .seccionTarjetas{
-            display:flex; 
-            justify-content: space-around; 
-            width: 70%;
-        }
-        .textoTarjetas{
-            color: gray;
-        }
-        .headVarios{
-            display:flex; 
-            justify-content: space-between;
-            width: 68%;
-            align-items: center;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="styles.css " />
 </head>
 <body>
-    <header>
+    <header class="headerBlog">
         <div>
-            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home"></a>
+            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
             <h1>Why Choose Markly?</h1>
         </div>   
         <div class="headVarios">
@@ -55,7 +23,7 @@
             </div>
         </div>       
     </header>
-    <main>
+    <main class="mainBlogBag">
         <section class="seccionTarjetas">
             <div class="tarjeta">
                 <table>
