Se realiza ahustes a los textos de la sección 2 y se adiciona a la pagina Bags el Nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="styles.css " />
+  <link rel="stylesheet" href="./styles.css " />
   <title>Markly</title>
 </head>
 
@@ -36,7 +36,7 @@
     <section>
       <article>
         <div class="seccion1">
-          <img src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" width="50%"/>
+          <img src="./assets/images/Rectangle.png" alt="Rectangulo de sombra" width="50%" />
           <img class="img-bolso" src="./assets/images/carteraCobrePpal.png" alt="Imagen de bolso" />
           <img class="img-tittle" src="./assets/images/Group.png" alt="Titulo" />
           <p class="texto">We believe in the power of a well-crafted bag to enhance your lifestyle. <br>
@@ -54,25 +54,27 @@
     <!--sección 2-->
     <section class="secciong">
       <div class="seccionFlex2">
-        <article>
-          <span>YOUR PERFECT FIT</span>
-          <h2>We believe in fashion that cares for the planet. Our commitment to sustainability goes beyond creating
-            stylish bags – it's about making a positive impact</h2>
-          <p>Choosing the right size is crucial when it comes to bags. Use our comprehensive size guide to ensure your
-            Markly bag is not only stylish but also perfectly suited to your needs. From compact crossbodies to spacious
-            totes, we've got the right size for every occasion.</p>
+        <article class="contenedors2">
+          <div class="centrado">
+            <span>YOUR PERFECT FIT</span>
+            <h2>We believe in fashion that cares for the planet. Our commitment to sustainability goes beyond creating
+              stylish bags – it's about making a positive impact</h2>
+            <p>Choosing the right size is crucial when it comes to bags. Use our comprehensive size guide to ensure your
+              Markly bag is not only stylish but also perfectly suited to your needs. From compact crossbodies to
+              spacious
+              totes, we've got the right size for every occasion.</p>
         </article>
         <article>
-          <img src="./assets/images/bolsoNegro.png" alt="Bolso Negro" width="450px"/>
+          <img src="./assets/images/bolsoNegro.png" alt="Bolso Negro" width="450px" />
         </article>
       </div>
     </section>
-  
+
     <!--sección 3-->
     <section class="secciong">
       <div class="seccionFlex3">
         <article>
-          <img src="./assets/images/piedrasColores.png" alt="Piedras de Colores" width="450px"/>
+          <img src="./assets/images/piedrasColores.png" alt="Piedras de Colores" width="450px" />
         </article>
         <article>
           <h2>Adventure collection is designed to keep up with your dynamic lifestyle, offering durability without
@@ -81,36 +83,38 @@
             collection of premium bags that seamlessly blend style, functionality, and durability.</p>
           <button>Shop Now!</button>
         </article>
-      </div>  
+      </div>
     </section>
 
     <!--sección 4-->
     <section class="secciong">
       <div class="seccionFlex4">
-        <article>  
-                <img src="./assets/images/carteraRosada.png" alt="Cartera Rosada" width="700px;"/>        
+        <article>
+          <img src="./assets/images/carteraRosada.png" alt="Cartera Rosada" width="700px;" />
         </article>
         <article>
-          <div> 
-                <div class="h1s4">
-                  <strong>
-                  Whether you're seeking classic sophistication, urban chic, or a companion for you, Markly has the perfect bag
-                  for every occasion.</strong>
-                </div>  
-                <div class="ps4">  
-                    <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's commitment to
-                      combining style, durability, and functionality.</p>
-                    <a href="#encabezado"><button class="btns4">Shop Now!</button></a>
-                </div>
-          </div>  
+          <div>
+            <div class="h1s4">
+              <strong>
+                Whether you're seeking classic sophistication, urban chic, or a companion for you, Markly has the
+                perfect bag
+                for every occasion.</strong>
+            </div>
+            <div class="ps4">
+              <p>Discover our current best-sellers and customer favorites. Each product is a testament to Markly's
+                commitment to
+                combining style, durability, and functionality.</p>
+              <a href="#encabezado"><button class="btns4">Shop Now!</button></a>
+            </div>
+          </div>
         </article>
-      </div>  
+      </div>
     </section>
 
     <!--sección 8-->
     <section class="secciong">
       <article>
-        <img src="./assets/images/carteraMiel.png" alt="carteraMiel" width="100%"/>
+        <img src="./assets/images/carteraMiel.png" alt="carteraMiel" width="100%" />
       </article>
       <article>
         <article>
