--- a/bags.html
+++ b/bags.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bags - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css " />
-    
+    <link rel="stylesheet" href="reset.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css " />
+
 </head>
-<body >
-    <header class="headerBags">
-        <div class="headVarBags">
-            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
-            <h5>Urban Explorer & Adventure Seeker </h5>
-        </div>    
-        <h1 class="display-3"><strong>Explore our carefully <br>curated collections</strong></h1>
+
+<body>
+    <header>
+        <div class="headerPpal">
+            <div>
+                <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+                <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bags.html">Bags</a></li>
+                    <li><a href="accesories.html">Accesories</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="#contacto">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="logoshop">
+                <img src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+            </div>
+        </div>
+
+        <div class="headerBags">
+            <div class="headVarBags">
+                <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
+                <h5>Urban Explorer & Adventure Seeker </h5>
+            </div>
+            <h1 class="display-3"><strong>Explore our carefully <br>curated collections</strong></h1>
+        </div>
     </header>
     <main class="mainBlogBag">
         <section>
@@ -23,56 +48,133 @@
 
                 <div id="carouselBagsCaptions" class="carousel slide">
                     <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                </div>
+                        <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active ajCarrusel">
                             <br><br><br>
-                            <img src="./assets/images/carteraAzulRey2.png" class="rd-block w-50 h-50" alt="Cartera Azul Rey">
+                            <img src="./assets/images/carteraAzulRey2.png" class="rd-block w-50 h-50"
+                                alt="Cartera Azul Rey">
                             <div class="carousel-caption d-none d-sm-block">
-                            <h5 class="display-6 text-black">Moderna cartera en Cuero Azul</h5>
-                            <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is just a click away.</p>
+                                <h5 class="display-6 text-black">Moderna cartera en Cuero Azul</h5>
+                                <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a
+                                    statement with Markly. Your perfect bag is just a click away.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/images/carteraCueroVerde.png" class="rd-block w-50 h-50" alt="Cartera Verde"><br><br><br><br><br>
+                            <img src="./assets/images/carteraCueroVerde.png" class="rd-block w-50 h-50"
+                                alt="Cartera Verde"><br><br><br><br><br>
                             <div class="carousel-caption d-none d-md-block">
-                            <h5 class="display-6 text-black">Moderna cartera en Cuero verde</h5>
-                            <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is just a click away.</p>
+                                <h5 class="display-6 text-black">Moderna cartera en Cuero verde</h5>
+                                <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a
+                                    statement with Markly. Your perfect bag is just a click away.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/images/carteraCueroBeige.png" class="rd-block w-50 h-50" alt="Cartera Beige"><br><br><br><br><br>
+                            <img src="./assets/images/carteraCueroBeige.png" class="rd-block w-50 h-50"
+                                alt="Cartera Beige"><br><br><br><br><br>
                             <div class="carousel-caption d-none d-md-block">
-                            <h5 class="display-6 text-black">Moderna cartera en Cuero Beige</h5>
-                            <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is just a click away.</p>
+                                <h5 class="display-6 text-black">Moderna cartera en Cuero Beige</h5>
+                                <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a
+                                    statement with Markly. Your perfect bag is just a click away.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/images/carteraCueroNegro.png" class="rd-block w-50 h-50" alt="Cartera Beige"><br><br><br><br><br>
+                            <img src="./assets/images/carteraCueroNegro.png" class="rd-block w-50 h-50"
+                                alt="Cartera Beige"><br><br><br><br><br>
                             <div class="carousel-caption d-none d-md-block">
-                            <h5 class="display-6 text-black">Moderna cartera en Cuero Negro</h5>
-                            <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a statement with Markly. Your perfect bag is just a click away.</p>
+                                <h5 class="display-6 text-black">Moderna cartera en Cuero Negro</h5>
+                                <p class="text-black">Explore our collections, embrace quality craftsmanship, and make a
+                                    statement with Markly. Your perfect bag is just a click away.</p>
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev btn-md" type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide="prev">
+                    <button class="carousel-control-prev btn-md" type="button" data-bs-target="#carouselBagsCaptions"
+                        data-bs-slide="prev">
                         <img src="./assets/images/flechaIzquierda.png" alt="Anterior slide">
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselBagsCaptions" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselBagsCaptions"
+                        data-bs-slide="next">
                         <img src="./assets/images/flechaDerecha.png" alt="Siguiente slide">
                     </button>
                 </div>
-            </div>    
+            </div>
         </section>
 
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer>
+        <div class="footer_div">
+            <div class="izquierda">
+                <img src="./assets/images/Property 1=Black.png" alt="Markly" />
+                <p>
+                    We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
+                    collection
+                    of
+                    premium bags
+                    that seamlessly blend style, functionality, and durability.
+                </p>
+                <!-- Contenido del div izquierdo -->
+            </div>
+            <div class="derecha">
+                <div>
+                    <ul>
+                        <li><b>Company</b></li>
+                        <li><a href="#">Bags</a></li>
+                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Services</b></li>
+                        <li><a href="#">Bussines</a></li>
+                        <li><a href="#">Modifications</a></li>
+                        <li><a href="#">Morgans Care</a></li>
+                        <li><a href="#">Insurance</a></li>
+                        <li><a href="#">Warranty</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Resource</b></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Newsletter</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">FAQS</a></li>
+                        <li><a href="#">Review</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Legal</b></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Tems of Used</a></li>
+                        <li><a href="#">Cookies</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="abajo">
+            <h3>©2024 Markly. All right reserved. </h3>
+            <div>
+                <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
