Se realiza los estylos de la sección 2 y 3, con lo que se terminan estos.

--- a/index.html
+++ b/index.html
@@ -56,13 +56,19 @@
       <div class="seccionFlex2">
         <article class="contenedors2">
           <div class="centrado">
-            <span>YOUR PERFECT FIT</span>
-            <h2>We believe in fashion that cares for the planet. Our commitment to sustainability goes beyond creating
+            <div class="pequeno">
+              <span>YOUR PERFECT FIT</span>
+            </div>
+            <h2 class="negrita-grande">We believe in fashion that cares for the planet. Our commitment to sustainability
+              goes
+              beyond creating
               stylish bags – it's about making a positive impact</h2>
-            <p>Choosing the right size is crucial when it comes to bags. Use our comprehensive size guide to ensure your
+            <p class="pequeno-opaco">Choosing the right size is crucial when it comes to bags. Use our comprehensive
+              size guide to ensure your
               Markly bag is not only stylish but also perfectly suited to your needs. From compact crossbodies to
               spacious
               totes, we've got the right size for every occasion.</p>
+          </div>
         </article>
         <article>
           <img src="./assets/images/bolsoNegro.png" alt="Bolso Negro" width="450px" />
@@ -76,12 +82,16 @@
         <article>
           <img src="./assets/images/piedrasColores.png" alt="Piedras de Colores" width="450px" />
         </article>
-        <article>
-          <h2>Adventure collection is designed to keep up with your dynamic lifestyle, offering durability without
-            compromising on style.</h2>
-          <p>At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
-            collection of premium bags that seamlessly blend style, functionality, and durability.</p>
-          <button>Shop Now!</button>
+        <article class="contenedors3">
+          <div class="centrado">
+            <h2 class="negrita-grande">Adventure collection is designed to keep up with your dynamic lifestyle, offering
+              durability without
+              compromising on style.</h2>
+            <p class="pequeno-opaco">At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle.
+              Explore our curated
+              collection of premium bags that seamlessly blend style, functionality, and durability.</p>
+            <button class="button-s3">Shop Now!</button>
+          </div>
         </article>
       </div>
     </section>
