--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="bags.html">Bags</a></li>
         <li><a href="accesories.html">Accesories</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="#contacto">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="logoshop">
