se termina la pagina de contacto, estilos mapas y titulos

--- a/Contact.html
+++ b/Contact.html
@@ -32,20 +32,10 @@
     </header>
 
     <main>
-        <div class="map-container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387084.77436820934!2d-74.25986415229187!3d40.697670005650504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1621458397977!5m2!1sen!2s"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
-        </div>
         <div class="tituloforms">
-            <div>
-                <h2>Formulario de Contacto</h2>
-            </div>
+            <h1 class="divtituloforms">Formulario de Contacto</h1>
         </div>
-
-
-        <div class="formulario">
+        <div class=" formulario">
             <form action="https://getform.io/f/rbeqmemb" method="POST">
                 <label class="labelf" for="nombre">Nombre:</label><br>
                 <input class="inputf" type="text" id="nombre" name="nombre" required><br><br>
@@ -70,6 +60,35 @@
 
                 <button class="buttonf" type="submit">Enviar</button>
             </form>
+        </div>
+
+        <div class="tituloforms">
+
+            <h1 class="divtituloforms">Visita nuestras tiendas. </h1>
+
+        </div>
+        <div class="mapp">
+            <div class="map2">
+                <div>
+                    <h2>New York</h2>
+                </div>
+                <div>
+                    <h2>Panama</h2>
+                </div>
+            </div>
+            <div class="map2">
+                <div class="map-container">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387084.77436820934!2d-74.25986415229187!3d40.697670005650504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1621458397977!5m2!1sen!2s"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="map-container">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4042068.8671730557!2d-82.75390365552462!3d8.368878777548757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa61583c8be2be3%3A0x79eee04d1fa59bcf!2sPanama!5e0!3m2!1sen!2sus!4v1716296772822!5m2!1sen!2sus"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>>
+                </div>
+            </div>
         </div>
     </main>
 
